Fix alignments

--- a/css/main.css
+++ b/css/main.css
@@ -34,19 +34,19 @@
 
 @-webkit-keyframes animSky {
    0% { background-position: 0px 100%; }
-   100% { background-position: -275px 100%; }
+   100% { background-position: -800px 100%; }
 }
 @-moz-keyframes animSky {
    0% { background-position: 0px 100%; }
-   100% { background-position: -275px 100%; }
+   100% { background-position: -800px 100%; }
 }
 @-o-keyframes animSky {
    0% { background-position: 0px 100%; }
-   100% { background-position: -275px 100%; }
+   100% { background-position: -800px 100%; }
 }
 @keyframes animSky {
    0% { background-position: 0px 100%; }
-   100% { background-position: -275px 100%; }
+   100% { background-position: -800px 100%; }
 }
 
 @-webkit-keyframes animBird {
@@ -155,12 +155,13 @@ Screen - Game
    width: 100%;
    height: 80%;
    background-image: url('../assets/background1.png');
+   background-size: cover;
    background-repeat: repeat-x;
    background-position: 0px 100%;
    background-color: #4ec0ca;
    
-   -webkit-animation: animSky 7s linear infinite;
-   animation: animSky 7s linear infinite;
+   -webkit-animation: animSky 16s linear infinite;
+   animation: animSky 16s linear infinite;
 }
 
 #flyarea
@@ -190,8 +191,9 @@ Screen - Game
    bottom: 0;
    width: 100%;
    height: 20%;
-   /* background-image: url('../assets/land.png'); */
+   background-image: url('../assets/land.png');
    background-repeat: repeat-x;
+   background-size: cover;
    background-position: 0px 0px;
    background-color: rgba(0, 120, 132, 0.32);
    
